# rara

./: .goreleaser.yaml  CONTRIBUTING.md  Cargo.toml  README.md
.github/: audit.yaml  release.yaml
.github/workflows/: audit.yaml  release.yaml
src/: cmd.rs  lib.rs  main.rs  pwgen.rs
