[package]
name = "rara"
version = "1.0.2"
authors = ["suquiya"]
description = "Rara is a password generator."
license = "MIT"
categories = ["command-line-utilities"]
documentation = "https://docs.rs/rara/"
repository = "https://github.com/suquiya/rara"
homepage = "https://github.com/suquiya/rara"
edition = "2024"


[dependencies]
combu = "1.4.1"
rand = "0.9.0"
